warnings & local tool -> tool
